--- a/public/index.html
+++ b/public/index.html
@@ -3,8 +3,16 @@
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Reggae+One&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Reggae+One&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://www.radiobells.com/script/style.css"
+      type="text/css"
+      rel="stylesheet"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
@@ -27,8 +35,16 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>React App</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl"
+      crossorigin="anonymous"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css"
+    />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
@@ -43,5 +59,48 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+
+    <div class="Radio" id="radio">
+      <div id="radiobells_container">
+        #radiobells_script_hash
+      </div>
+      <link
+        href="https://www.radiobells.com/script/style.css"
+        type="text/css"
+        rel="stylesheet"
+      />
+      <script type="text/javascript">
+        var rad_backcolor = "#000000";
+        var rad_logo = "white";
+        var rad_autoplay = false;
+        var rad_width = "responsive";
+        var rad_width_px = 330;
+        var rad_stations = [
+          [
+            "https://emgregion.hostingradio.ru:8064/moscow.europaplus.mp3",
+            "Европа плюс",
+            "europaplus",
+          ],
+          [
+            "http://air2.radiorecord.ru:9003/rr_320",
+            "Радио Рекорд",
+            "radiorecord",
+          ],
+          ["https://nashe1.hostingradio.ru/nashe-256", "Наше радио", "nashe"],
+          [
+            "https://pub0302.101.ru:8443/stream/air/aac/64/100",
+            "Авторадио",
+            "avtoradio",
+          ],
+          ["http://ic7.101.ru:8000/a99?", "Радио Energy", "nrj"],
+          ["https://online.kissfm.ua/KissFM_HD", "Kiss FM", "kissfm"],
+        ];
+      </script>
+      <script
+        type="text/javascript"
+        src="https://www.radiobells.com/script/v2_1.js"
+        charset="UTF-8"
+      ></script>
+    </div>
   </body>
 </html>
